# lidar_to_lidar_calibrator

./: CMakeLists.txt  README.md  package.xml
examples/parking_garage_vlp16s/: config.json  extrinsics.json  run_example.sh
include/lidar_to_lidar_calibrator/: LidarToLidarCalibrator.h  ceres_pose_prior_cost_functor.h
src/: CalibrateLidarToLidar.cpp
src/lib/: CMakeLists.txt  LidarToLidarCalibrator.cpp
tests/: Tests.cpp
